--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Tejaas Mukunda Reddy</h2>
-        <p>I'm <span class="typed" data-typed-items="Cloud Engineer, ">Software Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I'm <span class="typed" data-typed-items="Cloud Engineer,Software Developer">Software Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
