--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
+              <h4>Software Developer Intern</h4>
               <h5>July 2019 - September 2020</h5>
               <p><em>V2Soft Private Limited, Bengaluru, India</em></p>
               <ul>
