--- a/index.html
+++ b/index.html
@@ -303,6 +303,15 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Software Developer Intern</h4>
+              <h5>September 2024 - Present</h5>
+              <p><em>V2Soft Private Limited, Bloomfield Hills, MI</em></p>
+              <ul>
+                <li>Fine-tuned LLaMA 3.1, targeting a 30% reduction in hallucinations and enhanced memory efficiency using quantization and advanced techniques</li>
+                <li>Conducted in-depth research on optimal LLM models, enhancing model selection accuracy by 25% to effectively meet diverse client specifications</li>
+               </ul>
+            </div>
+            <div class="resume-item">
               <h4>Graduate Teaching Associate</h4>
               <h5>August 2023 - May 2024</h5>
               <p><em>California State University, Fullerton, CA</em></p>
