--- a/index.html
+++ b/index.html
@@ -303,8 +303,19 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Junior Software Developer </h4>
+              <h5>October 2024 - Present</h5>
+              <p><em>The Legal Leads, Torrance, CA</em></p>
+              <ul>
+                <li>Leading the development of an in-house AI call analysis tool using Assembly AI, Llama, and OpenAI Whisper models to reduce third-party costs</li>
+                <li>Designing a scalable backend and frontend architecture for AI products to accelerate NLP task performance and deliver a seamless user experience</li>
+                <li>Optimized and developed Salesforce Apex API integration with indexing and query enhancements, targeting a 30% improvement in response times</li>
+                <li> Collaborated closely with cross-functional teams to define requirements for Salesforce data flow, aiming to enhance system efficiency by 25%</li>
+               </ul>
+            </div>
+            <div class="resume-item">
               <h4>Software Developer Intern</h4>
-              <h5>September 2024 - Present</h5>
+              <h5>September 2024 - October 2024</h5>
               <p><em>V2Soft Private Limited, Bloomfield Hills, MI</em></p>
               <ul>
                 <li>Fine-tuned LLaMA 3.1, targeting a 30% reduction in hallucinations and enhanced memory efficiency using quantization and advanced techniques</li>
